--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Downloads.loader.js";
+      var loaderUrl = buildUrl + "/WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Downloads.data.unityweb",
-        frameworkUrl: buildUrl + "/Downloads.framework.js.unityweb",
-        codeUrl: buildUrl + "/Downloads.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGL.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGL.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGL.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "github-deploment-project",
-        productVersion: "0.1",
+        productVersion: "0.0.19",
         showBanner: unityShowBanner,
       };
 
